--- a/yaml/hello_arc.yaml
+++ b/yaml/hello_arc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-arc
   namespace: hello-arc 
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 80
     targetPort: 8080
