--- a/releases/prod/hello-arc.yaml
+++ b/releases/prod/hello-arc.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: hello-arc
-  namespace: arc-demo
+  #namespace: arc-demo
 spec:
   releaseName: hello-arc-prod
   chart:
