--- a/releases/prod/hello-arc.yaml
+++ b/releases/prod/hello-arc.yaml
@@ -16,4 +16,4 @@ spec:
     replicaCount: 1
     env:
       name: MESSAGE
-      value: Azure Arc and GitHub Demo
+      value: Demotime: Azure Arc, AKS and GitHub Actions and Azure DevOps
