--- a/releases/prod/hello-arc.yaml
+++ b/releases/prod/hello-arc.yaml
@@ -11,7 +11,7 @@ spec:
     ref: master
   values:
     image:
-      repository: liorkamrat/hello-arc
+      repository: oaviles/hello-arc
       tag: latest
     replicaCount: 1
     env:
