--- a/.github/workflows/message.yml
+++ b/.github/workflows/message.yml
@@ -23,7 +23,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.issues.createComment({
-              issue_number: context.issue.number,
+              issue_number: ${{ github.run_number }},
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: "🎉 You've created this issue,  GitOps Demos was executed !!!"
