--- a/releases/prod/hello-arc.yaml
+++ b/releases/prod/hello-arc.yaml
@@ -16,4 +16,4 @@ spec:
     replicaCount: 1
     env:
       name: MESSAGE
-      value: Demo about Multi-Cloud / GitOps with AKS, GitHub and Azure ARC. Powered by OA
+      value: Demo about Multi-Cloud / GitOps with EKS and AKS, GitHub and Azure ARC. Powered by OA
